# edk2-pytool-extensions

./: .coveragerc  .cspell.json  .flake8  .gitattributes  .gitignore  .markdownlint.yaml  .pydocstyle  404.html  BasicDevTests.py  ConfirmVersionAndTag.py  DocGen.py  LICENSE  MANIFEST.in  azure-pipelines-pr-gate.yml  azure-pipelines-release.yml  codecov.yaml  gen_api.py  index.html  log.py  mkdocs.yml  objects.inv  pyproject.toml  pytest.ini  readme.md  requirements.publisher.txt  requirements.txt  ruff.toml  search.html  setup.py
.githooks/: advanced-pre-commit-config.yaml  basic-pre-commit-config.yaml
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  doc_report.yml  feature_request.yml
.github/workflows/: CIRunner.yml  UnitTestRunner.yml  VariableProducer.yml  ci.yml  codeql-analysis.yml  codeql.yml  dependabot.yml  doc-release.yml  prgate.yml  run-ci.yml  test-packageci.yml
api/base_abstract_invocable/: index.html
api/edk2_git/: index.html
api/edk2_invocable/: index.html
api/edk2_logging/: index.html
azure-pipelines/: azure-pipelines-release.yml  azure-pipelines-test.yml  ubuntu-test-pr-ci.yml  windows-robot-integration-test.yml  windows-robot-test-edk2.yml  windows-test-pr-ci.yml
azure-pipelines/templates/: auto-doc-job.yml  basic-setup-steps.yml  build-publish-whl-steps.yml  build-test-job.yml  doc-gen-steps.yml  flake8-test-steps.yml  markdown-lint-steps.yml  mkdocs-test-steps.yml  pydocstyle-test-steps.yml  pytest-test-steps.yml  ruff-test-steps.yml  spell-test-steps.yml
docs/: coverage.md  developing.md  publishing.md  using.md
docs/contributor/: coverage.md  create.md  developing.md  publishing.md  python_msv.md  python_release.md
docs/features/: feature_extdep.md  feature_invocables.md  feature_plugin_manager.md  feature_sde.md  feature_settings_manager.md
docs/usability/: creating_invocable.md  environment_variables.md  porting_a_platform.md  using_extdep.md  using_firmware_policy_tool.md  using_image_validation_tool.md  using_linux.md  using_logging.md  using_nuget_publishing.md  using_omnicache.md  using_plugin_manager.md  using_settings_manager.md  using_sig_db_tool.md  using_versioninfo.md  using_wsl.md  using_wsl_or_linux.md
docs/user/: gen_api.py  index.md  requirements.txt
edk2toolext/: base_abstract_invocable.py  codeql.py  config_validator.py  edk2_git.py  edk2_invocable.py  edk2_invoker.py  edk2_logging.py  edk2_report.py  image_validation.py  nuget_publishing.py  omnicache.py  query.sql  report_generator.py  rust_environment.py  signer_plaything.py
edk2toolext/SBAT/: PEObject.py  sbat_rule_helper.py  test.json  test1.json  versioninfo_tool.py
edk2toolext/StatusCodeProcessor/: README.md  StatusCodeprocessor.py
edk2toolext/capsule/: Readme.md  capsule_helper.py  capsule_tool.py  pyopenssl_signer.py  signing_helper.py  signing_helper_test.py  signtool_signer.py
edk2toolext/docgen/: generate.py  readme.md  regenerate.py
edk2toolext/environment/: abs_builder.py  conf_mgmt.py  customizable_builder.py  environment_descriptor_files.py  external_dependency.py  multiple_workspace.py  plugin_manager.py  repo_resolver.py  rust.py  self_describing_environment.py  shell_environment.py  uefi_build.py  var_dict.py  version_aggregator.py
edk2toolext/invocables/: __init__.py  customizable_build.py  edk2_ci_build.py  edk2_ci_setup.py  edk2_coverage.py  edk2_initialize.py  edk2_multipkg_aware_invocable.py  edk2_parse.py  edk2_platform_build.py  edk2_pr_eval.py  edk2_report.py  edk2_setup.py  edk2_update.py
edk2toolext/os/: __init__.py  uefivariablesupport.py
edk2toolext/perf/: __init__.py  fpdt_parser.py  perf_report_generator.py  perf_report_template.html
edk2toolext/statuscodeprocessor/: __init__.py  statuscodeprocessor.py
edk2toolext/telem/: cper_parser.py
edk2toolext/tests/: test_az_cli_universal_dependency.py  test_capsule_helper.py  test_ci_build_plugin.py  test_conf_mgmt.py  test_config_validator.py  test_docgen.py  test_edk2_ci_build.py  test_edk2_ci_setup.py  test_edk2_coverage.py  test_edk2_git.py  test_edk2_logging.py  test_edk2_plat_build.py  test_edk2_setup.py  test_edk2_update.py  test_external_dependency.py  test_git_dependency.py  test_image_validation.py  test_nuget.py  test_nuget_dependency.py  test_nuget_publish.py  test_omnicache.py  test_pyopenssl_signer.py  test_repo_resolver.py  test_secure_boot_report.py  test_secureboot_audit.py  test_self_describing_environment.py  test_shell_environment.py  test_signtool_signer.py  test_uefi_build.py  test_var_dict.py  test_version_aggregator.py  test_versioninfo.py  test_web_dependency.py  uefi_tree.py  versioninfo_tool_test.py
edk2toolext/uefi/: patch_var_store.py  sig-db.py  sig_db_tool.py
edk2toolext/versioninfo/: VERSIONINFO.json  __init__.py  versioninfo_helper.py  (+1 more)
integration_test/: ReadMe.md  Shared_Keywords.robot  edk2_core_ci.robot  edk2_platform_ci.robot  edk2_stuart_pr_eval.robot  mu_core_ci.robot  mu_stuart_pr_eval.robot  pip-requirements.txt
search/: search_index.json
tests.integration/: .gitignore  ReadMe.md  Shared_Keywords.robot  edk2_core_ci.robot  edk2_platform_ci.robot  edk2_stuart_pr_eval.robot  mu_core_ci.robot  mu_stuart_pr_eval.robot  pip-requirements.txt
tests.unit/: __init__.py  test_az_cli_universal_dependency.py  test_ci_build_plugin.py  test_codeql.py  test_conf_mgmt.py  test_edk2_ci_build.py  test_edk2_ci_setup.py  test_edk2_init.py  test_edk2_invocable.py  test_edk2_logging.py  test_edk2_plat_build.py  test_edk2_setup.py  test_edk2_update.py  test_external_dependency.py  test_fpdt_parser.py  test_git_dependency.py  test_image_validation.py  test_nuget.py  test_nuget_dependency.py  test_nuget_publish.py  test_omnicache.py  test_patch_var_store.py  test_perf_report_generator.py  test_pyopenssl_signer.py  test_repo_resolver.py  test_rust_environment.py  test_secureboot_audit.py  test_self_describing_environment.py  test_shell_environment.py  test_signtool_signer.py  test_uefi_build.py  test_var_dict.py  test_version_aggregator.py  test_versioninfo.py  test_web_dependency.py  uefi_tree.py
(+159 files in other folders)
